// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches last snapshot 1`] = `
<SafeAreaViewMock>
  <KeyboardFriendlyView>
    <View>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
    </View>
    <View>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <Component
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
    </View>
    <View>
      <Button
        disabled={false}
        onPress={[Function]}
        text="Continue"
      />
    </View>
  </KeyboardFriendlyView>
</SafeAreaViewMock>
`;

exports[`matches last snapshot when there is an error 1`] = `
<SafeAreaView>
  <KeyboardFriendlyView>
    <View>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
    </View>
    <View>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              This is an error
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </KeyboardFriendlyView>
</SafeAreaView>
`;

exports[`validates the url 1`] = `
<SafeAreaView>
  <KeyboardFriendlyView>
    <View>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
    </View>
    <View>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              Please enter a URL
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </KeyboardFriendlyView>
</SafeAreaView>
`;

exports[`validates the url 2`] = `
<SafeAreaView>
  <KeyboardFriendlyView>
    <View>
      <Text>
        Choose an address for your community
      </Text>
      <Text>
        Your URL is the address that members will use to access your community online. The shorter the better!
      </Text>
    </View>
    <View>
      <View>
        <Text>
          What's the address for your community?
        </Text>
        <TextInput
          allowFontScaling={true}
          autoCapitalize="none"
          autoCorrect={false}
          onChangeText={[Function]}
          rejectResponderTermination={true}
          returnKeyType="next"
          underlineColorAndroid="rgba(0,0,0,0)"
        />
      </View>
      <View>
        <View>
          <View />
          <View>
            <Text>
              URLs must have between 2 and 40 characters, and can only have lower case letters, numbers, and dashes.
            </Text>
          </View>
        </View>
      </View>
    </View>
    <View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Continue
              </Text>
            </View>
          </View>
        </View>
      </View>
    </View>
  </KeyboardFriendlyView>
</SafeAreaView>
`;
